--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@azure/core-http": "^2.3.1",
+    "@azure/msal-browser": "^2.31.0",
+    "@azure/storage-blob": "^12.12.0",
     "core-js": "^3.8.3",
+    "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
